--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -28,7 +28,7 @@ body {
   margin: 0 auto;
 }
 
-.header__menuleft {
+.navigation {
   display: flex;
   width: 520px;
   justify-content: space-between;
@@ -36,7 +36,7 @@ body {
   padding: 24px 0px;
 }
 
-.header__menuright {
+.menu-right {
   align-items: center;
   width: 333px;
   display: flex;
@@ -44,17 +44,17 @@ body {
   padding: 0;
 }
 
-.header-icon {
+.menu-right__icon {
   fill: #757575;
   margin-right: 10px;
 }
 
-.header__contacts__link:hover .header-icon,
-.header__contacts__link:focus .header-icon {
+.menu-right__link:hover .menu-right__icon,
+.menu-right__link:focus .menu-right__icon {
   fill: #2196F3;
 }
 
-.header__contanier {
+.header__container {
   width: 1200px;
   margin: 0 auto;
   display: flex;
@@ -62,7 +62,7 @@ body {
   align-items: center;
 }
 
-.header__page {
+.header-page {
   border-bottom: 1px solid #bbbbbb;
 }
 
@@ -82,7 +82,7 @@ body {
   color: #2196F3;
 }
 
-.header__item {
+.header-list__item {
   font-weight: 500;
   font-size: 14px;
   line-height: 1, 14;
@@ -90,7 +90,7 @@ body {
   position: relative;
 }
 
-.header__list {
+.header-list {
   display: flex;
   justify-content: space-between;
   list-style: none;
@@ -102,17 +102,17 @@ body {
   width: 281px;
 }
 
-.header__link {
+.header-list__link {
   position: relative;
   color: #212121;
 }
 
-.header__link:hover::after {
+.header-list__link:hover::after {
   width: 100%;
   transition: 0.2s ease;
 }
 
-.header__link:after {
+.header-list__link:after {
   content: "";
   display: block;
   background-color: #2196F3;
@@ -123,12 +123,12 @@ body {
   top: 45px;
 }
 
-.header__link:hover {
+.header-list__link:hover {
   color: #2196F3;
   transition: 0.2s ease;
 }
 
-.header__contacts__link {
+.menu-right__link {
   text-decoration: none;
   color: #757575;
   font-weight: 500;
@@ -138,23 +138,23 @@ body {
   list-style: none;
 }
 
-.header__contacts__link:hover,
-.header__contacts__link:focus {
+.menu-right__link:hover,
+.menu-right__link:focus {
   color: #2196F3;
   transition: 0.2s ease;
 }
 
-.main__section__bth {
+.section-bth {
   margin: 94px 0px 50px;
 }
 
-.main__list__bth {
+.list-bth {
   list-style: none;
   display: flex;
   justify-content: center;
 }
 
-.main__button__item {
+.list-bth__button {
   padding: 0 25px;
   height: 38px;
   border-radius: 4px;
@@ -172,8 +172,8 @@ body {
   cursor: pointer;
 }
 
-.main__button__item:hover,
-.main__button__item:focus {
+.list-bth__button:hover,
+.list-bth__button:focus {
   background-color: #2196F3;
   color: #FFFFFF;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -185,7 +185,7 @@ body {
   height: 294px;
 }
 
-.main__title {
+.cards-list__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -194,7 +194,7 @@ body {
   margin: 20px 24px 0;
 }
 
-.main__parag {
+.cards-list__parag {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.87;
@@ -205,14 +205,14 @@ body {
   margin: 0px 24px 20px;
 }
 
-.section__cards {
+.section-cards {
   width: 1170px;
   height: 1290px;
   margin: 0 auto 94px;
   padding: 0;
 }
 
-.cards__list {
+.cards-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -220,13 +220,13 @@ body {
   list-style: none;
 }
 
-.cards__item {
+.cards-list__item {
   border: 1px solid #EEEEEE;
   position: relative;
   overflow: hidden;
 }
 
-.cards__item:nth-child(-n+6) {
+.cards-list__item:nth-child(-n+6) {
   margin-bottom: 30px;
 }
 
@@ -251,7 +251,7 @@ body {
   width: 100%;
 }
 
-.cards__item:hover .overlay {
+.cards-list__item:hover .overlay {
   transform: translatey(0);
 }
 
@@ -261,21 +261,21 @@ body {
   height: 252px;
 }
 
-.footer__content {
+.footer-content {
   display: flex;
 }
 
-.footer__contact {
+.footer-contact {
   padding-bottom: 60px;
   margin-right: 70px;
 }
 
-.footer__contact__list {
+.contact-list {
   list-style: none;
   padding: 0;
 }
 
-.footer__contact__list a {
+.contact-list a {
   text-decoration: none;
   font-weight: 400;
   font-size: 14px;
@@ -284,7 +284,7 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer__parag {
+.footer-contact__parag {
   width: 231px;
   height: 21px;
   margin-top: 20px;
@@ -295,12 +295,12 @@ body {
   color: #FFFFFF;
 }
 
-.footer__contact__item {
+.contact-list__item {
   width: 231px;
   height: 21px;
 }
 
-.footer__contact__item:first-child {
+.contact-list__item:first-child {
   margin: 9px 0px;
 }
 
@@ -314,11 +314,11 @@ body {
   text-decoration: none;
 }
 
-.footer__links {
+.footer-links {
   padding: 12px 0 0;
 }
 
-.footer__title {
+.footer-links__title {
   margin-bottom: 20px;
   color: #FFF;
   font-size: 14px;
@@ -328,12 +328,12 @@ body {
   text-transform: uppercase;
 }
 
-.footer__list__links {
+.list-links {
   display: flex;
   justify-content: space-between;
 }
 
-.footer__links__item {
+.list-links__item {
   width: 44px;
   height: 44px;
   background-color: rgba(255, 255, 255, 0.1);
@@ -343,28 +343,28 @@ body {
   justify-content: center;
 }
 
-.footer__links__item:nth-child(-n+3) {
+.list-links__item:nth-child(-n+3) {
   margin-right: 10px;
 }
 
-.footer__link__icon {
+.list-links__icon {
   width: 20px;
   height: 20px;
 }
 
-.footer__links__item:hover,
-.footer__links__item:focus {
+.list-links__item:hover,
+.list-links__item:focus {
   background-color: #2196F3;
   transition: 0.3s ease-in;
 }
 
-.footer__svg {
+.list-links__svg {
   width: 20px;
   height: 20px;
   fill: #FFFFFF;
 }
 
-.footer__label {
+.footer-form__label {
   color: #FFF;
   font-size: 14px;
   font-weight: 700;
@@ -372,7 +372,7 @@ body {
   text-transform: uppercase;
 }
 
-.footer__email {
+.footer-form__email {
   width: 358px;
   height: 50px;
   border-radius: 4px;
@@ -384,7 +384,7 @@ body {
   margin-top: 20px;
 }
 
-.subscribe__bth {
+.form-list__bth {
   width: 200px;
   height: 50px;
   border-radius: 4px;
@@ -415,19 +415,15 @@ body {
     -moz-box-shadow: 1px 3px 18px 19px rgba(0, 0, 0, 0.75);
   }
 }
-.footer__form {
+.footer-form {
   display: flex;
   align-items: flex-end;
 }
 
-.subscribe__svg {
+.footer-form__svg {
   margin-left: 10px;
   width: 24px;
   height: 24px;
-}
-
-.subscribe__list {
-  display: flex;
 }
 
 .subscribe {
