--- a/SASS/components/_electricity.scss
+++ b/SASS/components/_electricity.scss
@@ -2,7 +2,7 @@
     margin: 94px auto;
 }
 
-.electricity__parag {
+.electricity__title {
     text-align: center;
     margin: 0px 0px 50px;
     font-weight: 700;
@@ -11,26 +11,26 @@
 
 }
 
-.electricity__list {
+.electricity-list {
     display: flex;
     margin: 0 auto;
 }
 
-.electricity__thumb {
+.electricity-list__thumb {
     width: 370px;
     height: 294px;
     position: relative;
 }
 
-.electricity__img {
+.electricity-list__img {
     object-position: 100%;
 }
 
-.electricity__item:nth-child(-n+2) {
+.electricity-list__item:nth-child(-n+2) {
     margin-right: 30px;
 }
 
-.electricity__label {
+.electricity-list__label {
     position: absolute;
     width: 370px;
     height: 70px;
@@ -44,20 +44,4 @@
     font-weight: 700;
     letter-spacing: 0.42px;
     text-transform: uppercase;
-    animation: labelshadow 1s ease-in 500ms infinite alternate;
-}
-
-@keyframes labelshadow {
-    0% {
-        box-shadow: 1px 3px 18px 0px rgba(0, 0, 0, 0.75);
-        -webkit-box-shadow: 1px 3px 18px 0px rgba(0, 0, 0, 0.75);
-        -moz-box-shadow: 1px 3px 18px 0px rgba(0, 0, 0, 0.75);
-
-    }
-
-    100% {
-        box-shadow: 1px 3px 37px 16px rgba(0, 0, 0, 0.75);
-        -webkit-box-shadow: 1px 3px 37px 16px rgba(0, 0, 0, 0.75);
-        -moz-box-shadow: 1px 3px 37px 16px rgba(0, 0, 0, 0.75);
-    }
 }
