--- a/SASS/components/_features.scss
+++ b/SASS/components/_features.scss
@@ -3,22 +3,23 @@
     margin: 0 auto;
 }
 
-.features__list {
+.features-list {
     list-style: none;
     display: flex;
     justify-content: center;
     margin: 94px 0px 0px 0px;
 }
 
-.features__subtitle {
+.features-list__subtitle {
     font-family: 'Roboto';
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
+    margin-bottom: 10px;
 }
 
-.features__paragraf {
+.features-list__paragraf {
     font-family: 'Roboto';
     font-weight: 400;
     font-size: 14px;
@@ -28,11 +29,11 @@
     margin: 0px 30px 0px 0px;
 }
 
-.features__item:nth-child(-n+3) {
+.features-list__item:nth-child(-n+3) {
     margin: 0 30px 0 0;
 }
 
-.features__cart {
+.features-list__cart {
     width: 270px;
     height: 120px;
     background-color: #F5F4FA;
@@ -40,7 +41,7 @@
     margin-bottom: 30px;
 }
 
-.features__icon {
+.features-list__icon {
     display: block;
     margin: 0 auto;
 }
