--- a/SASS/components/_hero.scss
+++ b/SASS/components/_hero.scss
@@ -62,7 +62,7 @@
     z-index: 99;
 }
 
-.hero__modal{
+.hero-modal{
     padding: 40px;
     width: 528px;
     height: 623px;
@@ -81,13 +81,13 @@
     visibility: hidden;
 }
 
-.hero__modal__list {
+.modal-list {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.hero__modal__label {
+.modal-list__label {
     display: flex;
     flex-direction: column;
     color: #757575;
@@ -97,7 +97,7 @@
     position: relative;
 }
 
-.hero__modal__input {
+.modal-list__input {
     margin-bottom: 10px;
     width: 448px;
     height: 40px;
@@ -110,23 +110,23 @@
 }
 
 
-.hero__modal__input:focus+.hero__modal__svg {
+.modal-list__input:focus+.modal-list__svg {
     fill: #2196F3;
     transition: 0.3s ease;
 }
 
-.hero__modal__input:hover+.hero__modal__svg {
+.modal-list__input:hover+.modal-list__svg {
     fill: #2196F3;
     transition: 0.3s ease;
 }
 
-.hero__modal__input:focus,
-.hero__modal__input:hover {
+.modal-list__input:focus,
+.modal-list__input:hover {
     border-color: #2196F3;
     transition: 0.3s ease;
 }
 
-.hero__bth__close {
+.hero-modal__close {
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -139,14 +139,14 @@
     padding: 5px;
 }
 
-.hero__close__svg {
+.hero-modal__svg {
     width: 18px;
     height: 18px;
     padding: 4px;
 }
 
-.hero__close__svg:hover,
-.hero__close__svg:focus {
+.hero-modal__svg:hover,
+.hero-modal__svg:focus {
     fill: #2196F3;
     transition: 0.3s ease;
 }
@@ -155,7 +155,7 @@
     display: block !important;
 }
 
-.hero__modal__textarea {
+.modal-list__textarea {
     width: 448px;
     height: 120px;
     border-radius: 4px;
@@ -165,7 +165,7 @@
     margin-top: 4px
 }
 
-.hero__modal__text {
+.hero-modal__text {
     margin: 20px 6px 30px 6px;
     color: #757575;
     font-size: 14px;
@@ -174,20 +174,20 @@
     letter-spacing: 0.42px;
 }
 
-.hero__modal__checkbox {
+.hero-modal__checkbox {
     margin-right: 7px;
     width: 16px;
     height: 15px;
 }
 
-.hero__modal__textarea::placeholder {
+.modal-list__textarea::placeholder {
     color: rgba(117, 117, 117, 0.50);
     font-size: 12px;
     font-weight: 400;
     letter-spacing: 0.12px;
 }
 
-.hero__modal__title {
+.hero-modal__title {
     color: #212121;
     text-align: center;
     font-size: 20px;
@@ -196,7 +196,7 @@
     margin-bottom: 12px;
 }
 
-.hero__modal__submit {
+.hero-modal__submit {
     width: 200px;
     height: 50px;
     border-radius: 4px;
@@ -213,7 +213,7 @@
     cursor: pointer;
 }
 
-.hero__modal__svg {
+.modal-list__svg {
     width: 18px;
     height: 18px;
     position: absolute;
@@ -221,7 +221,7 @@
     left: 12px;
 }
 
-.hero__modal__link {
+.hero-modal__link {
     color: #2196F3;
     font-size: 14px;
     font-style: normal;
