--- a/SASS/components/_portfolio-bth.scss
+++ b/SASS/components/_portfolio-bth.scss
@@ -1,15 +1,15 @@
-.main__section__bth {
+.section-bth {
     margin: 94px 0px 50px;
 }
 
-.main__list__bth {
+.list-bth {
     list-style: none;
     display: flex;
     justify-content: center;
 }
 
 
-.main__button__item {
+.list-bth__button {
     padding: 0 25px;
     height: 38px;
     border-radius: 4px;
@@ -28,8 +28,8 @@
 }
 
 
-.main__button__item:hover,
-.main__button__item:focus {
+.list-bth__button:hover,
+.list-bth__button:focus {
     background-color: #2196F3;
     color: #FFFFFF;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
