--- a/CSS/main.css
+++ b/CSS/main.css
@@ -44,16 +44,31 @@ body {
   padding: 0;
 }
 
+.menu-right__link {
+  text-decoration: none;
+  color: #757575;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  list-style: none;
+}
+.menu-right__link:hover, .menu-right__link:focus {
+  color: #2196F3;
+  transition: 0.2s ease;
+}
+
 .menu-right__icon {
   fill: #757575;
   margin-right: 10px;
 }
-
-.menu-right__link:hover .menu-right__icon,
-.menu-right__link:focus .menu-right__icon {
+.menu-right__link:hover .menu-right__icon {
   fill: #2196F3;
 }
 
+.header {
+  border-bottom: 1px solid #bbbbbb;
+}
 .header__container {
   width: 1200px;
   margin: 0 auto;
@@ -62,14 +77,10 @@ body {
   align-items: center;
 }
 
-.header-page {
-  border-bottom: 1px solid #bbbbbb;
-}
-
 .logo {
   width: 145px;
   height: 31px;
-  font-family: "Raleway", sans-serif;
+  font-family: getFont("Raleway-font"), sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -77,17 +88,8 @@ body {
   color: #212121;
   text-decoration: none;
 }
-
 .logo__web {
   color: #2196F3;
-}
-
-.header-list__item {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1, 14;
-  letter-spacing: 0.02em;
-  position: relative;
 }
 
 .header-list {
@@ -101,18 +103,28 @@ body {
   color: #212121;
   width: 281px;
 }
+.header-list__item {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1, 14;
+  letter-spacing: 0.02em;
+  position: relative;
+}
 
 .header-list__link {
   position: relative;
   color: #212121;
 }
-
+.header-list__link:hover {
+  color: #2196F3;
+  transition: 0.2s ease;
+}
 .header-list__link:hover::after {
+  content: "";
   width: 100%;
   transition: 0.2s ease;
 }
-
-.header-list__link:after {
+.header-list__link::after {
   content: "";
   display: block;
   background-color: #2196F3;
@@ -123,36 +135,14 @@ body {
   top: 45px;
 }
 
-.header-list__link:hover {
-  color: #2196F3;
-  transition: 0.2s ease;
-}
-
-.menu-right__link {
-  text-decoration: none;
-  color: #757575;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  list-style: none;
-}
-
-.menu-right__link:hover,
-.menu-right__link:focus {
-  color: #2196F3;
-  transition: 0.2s ease;
-}
-
 .hero {
-  background-color: #2F303A;
+  background-color: rgba(47, 48, 58, 0.8);
   padding: 200px 0;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../Image/Img.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
-
 .hero__title {
   font-weight: 900;
   font-size: 44px;
@@ -160,16 +150,15 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #FFF;
   margin-bottom: 30px;
 }
-
 .hero__btn {
   margin: 0 auto;
   display: block;
   width: 216px;
   height: 50px;
-  background: #2196F3;
+  background-color: #2196F3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-weight: 700;
@@ -177,7 +166,7 @@ body {
   line-height: 1.88;
   text-align: center;
   letter-spacing: 0.06em;
-  color: #FFFFFF;
+  color: #FFF;
   cursor: pointer;
   animation: herobth 1s ease-in 500ms infinite alternate;
 }
@@ -200,8 +189,14 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.2);
   z-index: 99;
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
 
 .hero-modal {
@@ -211,16 +206,77 @@ body {
   top: 100px;
   left: 495px;
   position: fixed;
-  background-color: #fff;
+  background-color: #FFF;
   border-radius: 4px;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   z-index: 100;
 }
-
-.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-  visibility: hidden;
+.hero-modal__close {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  background-color: #FFF;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  padding: 5px;
+}
+.hero-modal__svg {
+  width: 18px;
+  height: 18px;
+  padding: 4px;
+}
+.hero-modal__svg:hover, .hero-modal__svg:focus {
+  fill: #2196F3;
+  transition: 0.3s ease;
+}
+.hero-modal__text {
+  margin: 20px 6px 30px 6px;
+  color: #757575;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.42px;
+}
+.hero-modal__checkbox {
+  margin-right: 7px;
+  width: 16px;
+  height: 15px;
+}
+.hero-modal__link {
+  color: #2196F3;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.42px;
+  text-decoration-line: underline;
+}
+.hero-modal__submit {
+  width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  border: 0;
+  background: #2196F3;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2);
+  color: #FFF;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0.96px;
+  margin: 0 120px 0;
+  cursor: pointer;
+}
+.hero-modal__title {
+  color: #212121;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 0.6px;
+  margin-bottom: 12px;
 }
 
 .modal-list {
@@ -228,7 +284,6 @@ body {
   flex-direction: column;
   gap: 10px;
 }
-
 .modal-list__label {
   display: flex;
   flex-direction: column;
@@ -238,58 +293,35 @@ body {
   letter-spacing: 0.12px;
   position: relative;
 }
-
 .modal-list__input {
   margin-bottom: 10px;
   width: 448px;
   height: 40px;
   border-radius: 4px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.2);
   margin-top: 4px;
   outline: none;
   padding: 11px 0 11px 42px;
   cursor: pointer;
 }
-
-.modal-list__input:focus + .modal-list__svg {
-  fill: #2196F3;
+.modal-list__input:hover, .modal-list__input:focus {
+  border-color: #2196F3;
   transition: 0.3s ease;
 }
-
 .modal-list__input:hover + .modal-list__svg {
   fill: #2196F3;
   transition: 0.3s ease;
 }
-
-.modal-list__input:focus,
-.modal-list__input:hover {
-  border-color: #2196F3;
-  transition: 0.3s ease;
-}
-
-.hero-modal__close {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  background-color: #fff;
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  padding: 5px;
-}
-
-.hero-modal__svg {
-  width: 18px;
-  height: 18px;
-  padding: 4px;
-}
-
-.hero-modal__svg:hover,
-.hero-modal__svg:focus {
+.modal-list__input:focus + .modal-list__svg {
   fill: #2196F3;
   transition: 0.3s ease;
+}
+.modal-list__svg {
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  top: 28px;
+  left: 12px;
 }
 
 .is-visible {
@@ -300,83 +332,22 @@ body {
   width: 448px;
   height: 120px;
   border-radius: 4px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.2);
   resize: none;
   padding: 12px 16px;
   margin-top: 4px;
 }
-
-.hero-modal__text {
-  margin: 20px 6px 30px 6px;
-  color: #757575;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.42px;
-}
-
-.hero-modal__checkbox {
-  margin-right: 7px;
-  width: 16px;
-  height: 15px;
-}
-
 .modal-list__textarea::-moz-placeholder {
-  color: rgba(117, 117, 117, 0.5);
+  color: #757575;
   font-size: 12px;
   font-weight: 400;
   letter-spacing: 0.12px;
 }
-
 .modal-list__textarea::placeholder {
-  color: rgba(117, 117, 117, 0.5);
+  color: #757575;
   font-size: 12px;
   font-weight: 400;
   letter-spacing: 0.12px;
-}
-
-.hero-modal__title {
-  color: #212121;
-  text-align: center;
-  font-size: 20px;
-  font-weight: 700;
-  letter-spacing: 0.6px;
-  margin-bottom: 12px;
-}
-
-.hero-modal__submit {
-  width: 200px;
-  height: 50px;
-  border-radius: 4px;
-  border: 0;
-  background: #188CE8;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  color: #FFF;
-  text-align: center;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 30px;
-  letter-spacing: 0.96px;
-  margin: 0 120px 0;
-  cursor: pointer;
-}
-
-.modal-list__svg {
-  width: 18px;
-  height: 18px;
-  position: absolute;
-  top: 28px;
-  left: 12px;
-}
-
-.hero-modal__link {
-  color: #2196F3;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.42px;
-  text-decoration-line: underline;
 }
 
 .features {
@@ -390,7 +361,9 @@ body {
   justify-content: center;
   margin: 94px 0px 0px 0px;
 }
-
+.features-list__item:nth-child(-n+3) {
+  margin: 0 30px 0 0;
+}
 .features-list__subtitle {
   font-family: "Roboto";
   font-weight: 700;
@@ -399,7 +372,6 @@ body {
   letter-spacing: 0.03em;
   margin-bottom: 10px;
 }
-
 .features-list__paragraf {
   font-family: "Roboto";
   font-weight: 400;
@@ -409,11 +381,6 @@ body {
   color: #757575;
   margin: 0px 30px 0px 0px;
 }
-
-.features-list__item:nth-child(-n+3) {
-  margin: 0 30px 0 0;
-}
-
 .features-list__cart {
   width: 270px;
   height: 120px;
@@ -421,7 +388,6 @@ body {
   padding: 25px 0;
   margin-bottom: 30px;
 }
-
 .features-list__icon {
   display: block;
   margin: 0 auto;
@@ -430,7 +396,6 @@ body {
 .electricity {
   margin: 94px auto;
 }
-
 .electricity__title {
   text-align: center;
   margin: 0px 0px 50px;
@@ -443,22 +408,18 @@ body {
   display: flex;
   margin: 0 auto;
 }
-
+.electricity-list__item:nth-child(-n+2) {
+  margin-right: 30px;
+}
 .electricity-list__thumb {
   width: 370px;
   height: 294px;
   position: relative;
 }
-
 .electricity-list__img {
   -o-object-position: 100%;
      object-position: 100%;
 }
-
-.electricity-list__item:nth-child(-n+2) {
-  margin-right: 30px;
-}
-
 .electricity-list__label {
   position: absolute;
   width: 370px;
@@ -468,7 +429,7 @@ body {
   padding-top: 27px;
   background: rgba(47, 48, 58, 0.8);
   color: #FFF;
-  font-family: Roboto;
+  font-family: "Roboto";
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 0.42px;
@@ -479,7 +440,6 @@ body {
   background-color: #F5F4FA;
   padding: 94px;
 }
-
 .people__title {
   text-align: center;
   font-weight: 700;
@@ -488,28 +448,24 @@ body {
   margin: 0px 0px 50px;
 }
 
-.people-list__item {
-  background: #FFFFFF;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-
-.people-list__item:nth-child(-n+3) {
-  margin-right: 30px;
-}
-
 .people-list {
   list-style: none;
   display: flex;
   justify-content: center;
 }
-
+.people-list__item {
+  background: #FFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.people-list__item:nth-child(-n+3) {
+  margin-right: 30px;
+}
 .people-list__photo {
-  background: #FFFFFF;
+  background: #FFF;
   width: 270px;
   height: 260px;
 }
-
 .people-list__name {
   text-align: center;
   font-family: "Roboto";
@@ -519,43 +475,6 @@ body {
   letter-spacing: 0.03em;
   margin: 30px 0px 10px;
 }
-
-.social-list {
-  display: flex;
-  justify-content: space-between;
-  width: 206px;
-  margin: 16px auto 30px;
-  padding: 0px;
-}
-
-.social-list__icons {
-  fill: #AFB1B8;
-}
-
-.social-list__item:hover .social-list__icons {
-  fill: #FFFFFF;
-  transition: 0.3s ease;
-}
-
-.social-list__item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-}
-
-.social-list__item:hover,
-.social-list__item:focus {
-  border-radius: 50%;
-  background-color: #2196F3;
-  transition: background-color 0.2s ease-in;
-  box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
-  -webkit-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
-  -moz-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
-  transition: box-shadow 0.2s ease-in;
-}
-
 .people-list__work {
   text-align: center;
   font-family: "Roboto";
@@ -566,10 +485,40 @@ body {
   color: #757575;
 }
 
+.social-list {
+  display: flex;
+  justify-content: space-between;
+  width: 206px;
+  margin: 16px auto 30px;
+  padding: 0px;
+}
+.social-list__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+}
+.social-list__item__item:hover, .social-list__item:focus {
+  border-radius: 50%;
+  background-color: #2196F3;
+  transition: background-color 0.2s ease-in;
+  box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
+  -webkit-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
+  -moz-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
+  transition: box-shadow 0.2s ease-in;
+}
+.social-list__icons {
+  fill: #AFB1B8;
+}
+.social-list__item:hover .social-list__icons {
+  fill: #FFF;
+  transition: 0.3s ease;
+}
+
 .clients {
   padding: 94px 0;
 }
-
 .clients__title {
   color: #212121;
   text-align: center;
@@ -584,7 +533,6 @@ body {
   display: flex;
   justify-content: space-between;
 }
-
 .clients-list__item {
   display: flex;
   align-items: center;
@@ -594,18 +542,6 @@ body {
   border-radius: 4px;
   border: 1px solid #AFB1B8;
 }
-
-.clients-list__icon {
-  fill: #AFB1B8;
-  width: 106px;
-  height: 60px;
-}
-
-.clients-list__item:hover .clients-list__icon {
-  fill: #2196F3;
-  transition: fill 0.3s ease-in;
-}
-
 .clients-list__item:hover {
   border-color: #2196F3;
   transition: border-color 0.3s ease-in;
@@ -613,11 +549,29 @@ body {
   -webkit-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
   -moz-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
 }
+.clients-list .clients-list__icon {
+  fill: #AFB1B8;
+  width: 106px;
+  height: 60px;
+}
+.clients-list__item:hover .clients-list__icon {
+  fill: #2196F3;
+  transition: fill 0.3s ease-in;
+}
 
 .footer {
   padding: 60px 0;
   background-color: #2F303A;
   height: 252px;
+}
+.footer__logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: #FFF;
+  text-decoration: none;
 }
 
 .footer-content {
@@ -628,21 +582,6 @@ body {
   padding-bottom: 60px;
   margin-right: 70px;
 }
-
-.contact-list {
-  list-style: none;
-  padding: 0;
-}
-
-.contact-list a {
-  text-decoration: none;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
-
 .footer-contact__parag {
   width: 231px;
   height: 21px;
@@ -651,32 +590,32 @@ body {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: #FFFFFF;
+  color: #FFF;
 }
 
+.contact-list {
+  list-style: none;
+  padding: 0;
+}
 .contact-list__item {
   width: 231px;
   height: 21px;
 }
-
 .contact-list__item:first-child {
   margin: 9px 0px;
 }
-
-.footer__logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #ffffff;
+.contact-list a {
   text-decoration: none;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #AFB1B8;
 }
 
 .footer-links {
   padding: 12px 0 0;
 }
-
 .footer-links__title {
   margin-bottom: 20px;
   color: #FFF;
@@ -691,56 +630,30 @@ body {
   display: flex;
   justify-content: space-between;
 }
-
 .list-links__item {
   width: 44px;
   height: 44px;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.1019607843);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
 .list-links__item:nth-child(-n+3) {
   margin-right: 10px;
 }
-
+.list-links__item:hover, .list-links__item:focus {
+  background-color: #2196F3;
+  transition: 0.3s ease-in;
+}
 .list-links__icon {
   width: 20px;
   height: 20px;
 }
-
-.list-links__item:hover,
-.list-links__item:focus {
-  background-color: #2196F3;
-  transition: 0.3s ease-in;
-}
-
 .list-links__svg {
   width: 20px;
   height: 20px;
-  fill: #FFFFFF;
-}
-
-.footer-form__label {
-  color: #FFF;
-  font-size: 14px;
-  font-weight: 700;
-  letter-spacing: 0.42px;
-  text-transform: uppercase;
-}
-
-.footer-form__email {
-  width: 358px;
-  height: 50px;
-  border-radius: 4px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  background: rgba(33, 150, 243, 0);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  color: #fff;
-  padding: 15px 0 15px 16px;
-  margin-top: 20px;
+  fill: #FFF;
 }
 
 .form-list__bth {
@@ -774,19 +687,36 @@ body {
     -moz-box-shadow: 1px 3px 18px 19px rgba(0, 0, 0, 0.75);
   }
 }
-.footer-form {
-  display: flex;
-  align-items: flex-end;
-}
-
-.footer-form__svg {
-  margin-left: 10px;
-  width: 24px;
-  height: 24px;
-}
-
 .subscribe {
   padding-top: 12px;
   width: 570px;
   margin-left: 93px;
+}
+
+.footer-form {
+  display: flex;
+  align-items: flex-end;
+}
+.footer-form__label {
+  color: #FFF;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+}
+.footer-form__email {
+  width: 358px;
+  height: 50px;
+  border-radius: 4px;
+  border: 1px solid #757575;
+  background: rgba(33, 150, 243, 0);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2);
+  color: #FFF;
+  padding: 15px 0 15px 16px;
+  margin-top: 20px;
+}
+.footer-form__svg {
+  margin-left: 10px;
+  width: 24px;
+  height: 24px;
 }/*# sourceMappingURL=main.css.map */
