--- a/SASS/components/_clients.scss
+++ b/SASS/components/_clients.scss
@@ -1,47 +1,49 @@
 .clients {
     padding: 94px 0;
+
+    &__title {
+        color: getColor('primary');
+        text-align: center;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        letter-spacing: 1.08px;
+        margin-bottom: 50px;
+    }
 }
 
-.clients__title {
-    color: #212121;
-    text-align: center;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    letter-spacing: 1.08px;
-    margin-bottom: 50px;
-}
+
 
 .clients-list {
     display: flex;
     justify-content: space-between;
-}
 
-.clients-list__item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 170px;
-    height: 92px;
-    border-radius: 4px;
-    border: 1px solid #AFB1B8;
-}
+    &__item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 170px;
+        height: 92px;
+        border-radius: 4px;
+        border: 1px solid getColor('fourth');
 
-.clients-list__icon {
-    fill: #AFB1B8;
-    width: 106px;
-    height: 60px;
-}
+        &:hover {
+            border-color: getColor('hover');
+            transition: border-color 0.3s ease-in;
+            box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
+            -webkit-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
+            -moz-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
+        }
+    }
 
-.clients-list__item:hover .clients-list__icon {
-    fill: #2196F3;
-    transition: fill 0.3s ease-in;
-}
+    .clients-list__icon {
+        fill: getColor('fourth');
+        width: 106px;
+        height: 60px;
+    }
 
-.clients-list__item:hover {
-    border-color: #2196F3;
-    transition: border-color 0.3s ease-in;
-    box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
-    -webkit-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
-    -moz-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
+    &__item:hover &__icon {
+        fill: getColor('hover');
+        transition: fill 0.3s ease-in;
+    }
 }
