--- a/SASS/components/_footer.scss
+++ b/SASS/components/_footer.scss
@@ -1,7 +1,17 @@
 .footer {
     padding: 60px 0;
-    background-color: #2F303A;
+    background-color: getColor('footer');
     height: 252px;
+
+    &__logo {
+        font-family: 'Raleway', sans-serif;
+        font-weight: 700;
+        font-size: 26px;
+        line-height: 1.19;
+        letter-spacing: 0.03em;
+        color: getColor('secondary');
+        text-decoration: none;
+    }
 }
 
 .footer-content {
@@ -11,131 +21,98 @@
 .footer-contact {
     padding-bottom: 60px;
     margin-right: 70px;
+
+    &__parag {
+        width: 231px;
+        height: 21px;
+        margin-top: 20px;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        color: getColor('secondary');
+    }
 }
 
 .contact-list {
     list-style: none;
     padding: 0;
-}
 
-.contact-list a {
-    text-decoration: none;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
-}
+    &__item {
+        width: 231px;
+        height: 21px;
 
-.footer-contact__parag {
-    width: 231px;
-    height: 21px;
-    margin-top: 20px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: #FFFFFF;
-}
+        &:first-child {
+            margin: 9px 0px;
+        }
+    }
 
-.contact-list__item {
-    width: 231px;
-    height: 21px;
+    & a {
+        text-decoration: none;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        color: getColor('fourth');
+    }
 }
-
-.contact-list__item:first-child {
-    margin: 9px 0px;
-}
-
-.footer__logo {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    color: #ffffff;
-    text-decoration: none;
-}
-
 
 .footer-links {
     padding: 12px 0 0;
-}
 
-.footer-links__title {
-    margin-bottom: 20px;
-    color: #FFF;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
-    letter-spacing: 0.42px;
-    text-transform: uppercase;
+    &__title {
+        margin-bottom: 20px;
+        color: getColor('secondary');
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 700;
+        letter-spacing: 0.42px;
+        text-transform: uppercase;
+    }
 }
 
 .list-links {
     display: flex;
     justify-content: space-between;
-}
 
-.list-links__item {
-    width: 44px;
-    height: 44px;
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+    &__item {
+        width: 44px;
+        height: 44px;
+        background-color: getColor('sixth');
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-.list-links__item:nth-child(-n+3) {
-    margin-right: 10px;
-}
+        &:nth-child(-n+3) {
+            margin-right: 10px;
+        }
 
-.list-links__icon {
-    width: 20px;
-    height: 20px;
-}
+        &:hover, &:focus {
+            background-color: getColor('hover');
+            transition: 0.3s ease-in;
+        }
+    }
 
-.list-links__item:hover,
-.list-links__item:focus {
-    background-color: #2196F3;
-    transition: 0.3s ease-in;
-}
+    &__icon {
+        width: 20px;
+        height: 20px;
+    }
 
-.list-links__svg {
-    width: 20px;
-    height: 20px;
-    fill: #FFFFFF;
-}
-
-.footer-form__label {
-    color: #FFF;
-    font-size: 14px;
-    font-weight: 700;
-    letter-spacing: 0.42px;
-    text-transform: uppercase;
-}
-
-.footer-form__email {
-    width: 358px;
-    height: 50px;
-    border-radius: 4px;
-    border: 1px solid rgba(255, 255, 255, 0.30);
-    background: rgba(33, 150, 243, 0.00);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    color: #fff;
-    padding: 15px 0 15px 16px;
-    margin-top: 20px;
-
+    &__svg {
+        width: 20px;
+        height: 20px;
+        fill: getColor('secondary');
+    }
 }
 
 .form-list__bth {
     width: 200px;
     height: 50px;
     border-radius: 4px;
-    background: #2196F3;
+    background: getColor('hover');
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    color: #FFF;
+    color: getColor('secondary');
     text-align: center;
     font-size: 16px;
     font-weight: 700;
@@ -163,19 +140,39 @@
     }
 }
 
-.footer-form {
-    display: flex;
-    align-items: flex-end;
-}
-
-.footer-form__svg {
-    margin-left: 10px;
-    width: 24px;
-    height: 24px;
-}
-
 .subscribe {
     padding-top: 12px;
     width: 570px;
     margin-left: 93px;
+}
+
+.footer-form {
+    display: flex;
+    align-items: flex-end;
+
+    &__label {
+        color: #FFF;
+        font-size: 14px;
+        font-weight: 700;
+        letter-spacing: 0.42px;
+        text-transform: uppercase;
+    }
+
+    &__email {
+        width: 358px;
+        height: 50px;
+        border-radius: 4px;
+        border: 1px solid getColor('third');
+        background: rgba(33, 150, 243, 0.00);
+        box-shadow: 0px 4px 4px 0px getColor('backdrop');
+        color: getColor('secondary');
+        padding: 15px 0 15px 16px;
+        margin-top: 20px;
+    }
+
+    &__svg {
+        margin-left: 10px;
+        width: 24px;
+        height: 24px;
+    }
 }
