--- a/SASS/components/_hero.scss
+++ b/SASS/components/_hero.scss
@@ -1,40 +1,39 @@
 .hero {
-    background-color: #2F303A;
+    background-color: getColor('background');
     padding: 200px 0;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../Image/Img.jpg");
     background-position: center;
     background-repeat: no-repeat; 
     background-size: cover;
-}
 
-.hero__title {
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: #FFFFFF;
-    margin-bottom: 30px;
-}
+    &__title{
+        font-weight: 900;
+        font-size: 44px;
+        line-height: 1.36;
+        text-align: center;
+        letter-spacing: 0.06em;
+        text-transform: uppercase;
+        color: getColor('secondary');
+        margin-bottom: 30px;
+    }
 
-.hero__btn {
-    margin: 0 auto;
-    display: block;
-    width: 216px;
-    height: 50px;
-    background: #2196F3;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: #FFFFFF;
-    cursor: pointer;
-    animation: herobth 1s ease-in 500ms infinite alternate;
-
+    &__btn{
+        margin: 0 auto;
+        display: block;
+        width: 216px;
+        height: 50px;
+        background-color: getColor('hover');
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.88;
+        text-align: center;
+        letter-spacing: 0.06em;
+        color: getColor('secondary');
+        cursor: pointer;
+        animation: herobth 1s ease-in 500ms infinite alternate;
+    }
 }
 
 @keyframes herobth {
@@ -58,8 +57,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: getColor('backdrop');
     z-index: 99;
+}
+
+.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
 }
 
 .hero-modal{
@@ -69,86 +74,136 @@
     top: 100px;
     left: 495px;
     position: fixed;
-    background-color: #fff;
+    background-color: getColor('secondary');
     border-radius: 4px;
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
     z-index: 100;
-}
 
-.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-    visibility: hidden;
+    &__close{
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        border: 1px solid getColor('backdrop');
+        cursor: pointer;
+        background-color: getColor('secondary');
+        position: absolute;
+        top: 8px;
+        right: 8px;
+        padding: 5px;
+    }
+
+    &__svg{
+        width: 18px;
+        height: 18px;
+        padding: 4px;
+
+        &:hover, &:focus{
+            fill: getColor('hover');
+            transition: 0.3s ease;
+        }
+    }
+
+    &__text{
+        margin: 20px 6px 30px 6px;
+        color: getColor('third');
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0.42px;
+    }
+
+    &__checkbox{
+        margin-right: 7px;
+        width: 16px;
+        height: 15px;
+    }
+
+    &__link{
+        color: getColor('hover');
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0.42px;
+        text-decoration-line: underline;
+    }
+
+    &__submit{
+        width: 200px;
+        height: 50px;
+        border-radius: 4px;
+        border: 0;
+        background: getColor('hover');
+        box-shadow: 0px 4px 4px 0px getColor('backdrop');
+        color: getColor('secondary');
+        text-align: center;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 30px;
+        letter-spacing: 0.96px;
+        margin: 0 120px 0;
+        cursor: pointer;
+    }
+
+    &__title{
+        color: getColor('primary');
+        text-align: center;
+        font-size: 20px;
+        font-weight: 700;
+        letter-spacing: 0.6px;
+        margin-bottom: 12px;
+    }
 }
 
 .modal-list {
     display: flex;
     flex-direction: column;
     gap: 10px;
-}
 
-.modal-list__label {
-    display: flex;
-    flex-direction: column;
-    color: #757575;
-    font-size: 12px;
-    font-weight: 400;
-    letter-spacing: 0.12px;
-    position: relative;
-}
+    &__label{
+        display: flex;
+        flex-direction: column;
+        color: getColor('third');
+        font-size: 12px;
+        font-weight: 400;
+        letter-spacing: 0.12px;
+        position: relative;
+    }
 
-.modal-list__input {
-    margin-bottom: 10px;
-    width: 448px;
-    height: 40px;
-    border-radius: 4px;
-    border: 1px solid rgba(33, 33, 33, 0.20);
-    margin-top: 4px;
-    outline: none;
-    padding: 11px 0 11px 42px;
-    cursor: pointer;
-}
+    &__input{
+        margin-bottom: 10px;
+        width: 448px;
+        height: 40px;
+        border-radius: 4px;
+        border: 1px solid getColor('backdrop');
+        margin-top: 4px;
+        outline: none;
+        padding: 11px 0 11px 42px;
+        cursor: pointer;
 
+        &:hover,&:focus{
+            border-color: getColor('hover');
+            transition: 0.3s ease;
+        }
 
-.modal-list__input:focus+.modal-list__svg {
-    fill: #2196F3;
-    transition: 0.3s ease;
-}
+        &:hover+.modal-list__svg{
+            fill: getColor('hover');
+            transition: 0.3s ease;
+        }
 
-.modal-list__input:hover+.modal-list__svg {
-    fill: #2196F3;
-    transition: 0.3s ease;
-}
+        &:focus+.modal-list__svg{
+            fill: getColor('hover');
+            transition: 0.3s ease;
+        }
+    }
 
-.modal-list__input:focus,
-.modal-list__input:hover {
-    border-color: #2196F3;
-    transition: 0.3s ease;
-}
-
-.hero-modal__close {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    border: 1px solid rgba(0, 0, 0, 0.10);
-    cursor: pointer;
-    background-color: #fff;
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    padding: 5px;
-}
-
-.hero-modal__svg {
-    width: 18px;
-    height: 18px;
-    padding: 4px;
-}
-
-.hero-modal__svg:hover,
-.hero-modal__svg:focus {
-    fill: #2196F3;
-    transition: 0.3s ease;
+    &__svg{
+        width: 18px;
+        height: 18px;
+        position: absolute;
+        top: 28px;
+        left: 12px;
+    }
 }
 
 .is-visible {
@@ -159,74 +214,15 @@
     width: 448px;
     height: 120px;
     border-radius: 4px;
-    border: 1px solid rgba(33, 33, 33, 0.20);
+    border: 1px solid getColor('backdrop');
     resize: none;
     padding: 12px 16px;
-    margin-top: 4px
-}
+    margin-top: 4px;
 
-.hero-modal__text {
-    margin: 20px 6px 30px 6px;
-    color: #757575;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0.42px;
-}
-
-.hero-modal__checkbox {
-    margin-right: 7px;
-    width: 16px;
-    height: 15px;
-}
-
-.modal-list__textarea::placeholder {
-    color: rgba(117, 117, 117, 0.50);
-    font-size: 12px;
-    font-weight: 400;
-    letter-spacing: 0.12px;
-}
-
-.hero-modal__title {
-    color: #212121;
-    text-align: center;
-    font-size: 20px;
-    font-weight: 700;
-    letter-spacing: 0.6px;
-    margin-bottom: 12px;
-}
-
-.hero-modal__submit {
-    width: 200px;
-    height: 50px;
-    border-radius: 4px;
-    border: 0;
-    background: #188CE8;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    color: #FFF;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 30px;
-    letter-spacing: 0.96px;
-    margin: 0 120px 0;
-    cursor: pointer;
-}
-
-.modal-list__svg {
-    width: 18px;
-    height: 18px;
-    position: absolute;
-    top: 28px;
-    left: 12px;
-}
-
-.hero-modal__link {
-    color: #2196F3;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0.42px;
-    text-decoration-line: underline;
+    &::placeholder{
+        color: getColor('third');
+        font-size: 12px;
+        font-weight: 400;
+        letter-spacing: 0.12px;
+    }
 }
