--- a/SASS/components/_portfolio-bth.scss
+++ b/SASS/components/_portfolio-bth.scss
@@ -13,11 +13,11 @@
     padding: 0 25px;
     height: 38px;
     border-radius: 4px;
-    background: #F5F4FA;
-    border: #F5F5F5;
-    color: #212121;
+    background: getColor('fifth');
+    border: getColor('fifth');
+    color: getColor('primary');
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto';
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
@@ -30,8 +30,8 @@
 
 .list-bth__button:hover,
 .list-bth__button:focus {
-    background-color: #2196F3;
-    color: #FFFFFF;
+    background-color: getColor('hover');
+    color: getColor('secondary');
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     transition: background-color 0.2s ease-in;
 }
